--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
     "eslint": "^4.1.0",
     "eslint-config-wordpress": "^1.1.0",
+    "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.6.0",
     "eslint-plugin-react": "^7.1.0",
     "extract-text-webpack-plugin": "^2.1.0",
