--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "^15.5.4",
     "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
-    "react-transition-group": "^2.2.0"
+    "react-transition-group": "^2.2.0",
+    "style-loader": "^0.18.2"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
