--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "description": "WDS training schedule, recommendations and voting system.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --progress --colors --watch"
+    "build": "yarn webpack -- --env.env=prod",
+    "dev": "yarn webpack -- --env.env=dev",
+    "watch": "yarn webpack -- --watch --env.env=dev"
   },
   "author": "Kellen Mace",
-  "license": "GPL-2.0",
+  "license": "GPL-2.0+",
   "dependencies": {
     "axios": "^0.16.1",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
-    "react-transition-group": "^2.2.0",
-    "style-loader": "^0.18.2"
+    "react-transition-group": "^2.2.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
@@ -31,18 +31,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
-    "css-loader": "^0.28.1",
-    "cssnano": "^3.10.0",
-    "eslint": "^4.1.0",
-    "eslint-config-wordpress": "^1.1.0",
-    "eslint-loader": "^1.9.0",
-    "eslint-plugin-import": "^2.6.0",
-    "eslint-plugin-react": "^7.1.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "node-normalize-scss": "^3.0.0",
-    "node-sass": "^4.5.2",
-    "postcss-loader": "^1.3.3",
-    "sass-loader": "^6.0.3",
-    "webpack": "^2.5.1"
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "css-loader": "^0.28.5",
+    "eslint-config-wordpress": "^2.0.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "node-sass": "^4.5.3",
+    "progress-bar-webpack-plugin": "^1.10.0",
+    "sass-loader": "^6.0.6",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.5.5",
+    "webpack-merge": "^4.1.0"
   }
 }
