--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react": "^15.5.4",
     "react-datetime": "^2.8.10",
     "react-dom": "^15.5.4",
-    "react-flip-move": "^2.9.15",
+    "react-flip-move": "^2.9.15"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
